fix: windows scrollbars with wordwrap off was bad render

--- a/src/styles/brackets_codemirror_override.less
+++ b/src/styles/brackets_codemirror_override.less
@@ -151,7 +151,10 @@ div.CodeMirror-cursors {
 }
 
 .platform-win {
-    .CodeMirror-scrollbar-filler,
+    .CodeMirror-scrollbar-filler {
+        background-color: white;
+        height: 12px !important;
+    }
     .CodeMirror-gutter-filler {
         background-color: transparent;
         height: 12px !important;
